--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -180,6 +180,7 @@ a:hover {
   & .code-file {
     width: calc(55% - 20px);
     border: 1px solid var(--border);
+    box-shadow: 2px 2px 0px var(--boxsh);
     margin-bottom: 0;
     font-family: JBBold;
     font-size: 1rem;
@@ -189,9 +190,8 @@ a:hover {
 
   & .astro-code {
     width: calc(55% - 20px);
-    border: 1px solid var(--block-border);
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
+    border: 1px solid var(--border);
+    box-shadow: 2px 2px 0px var(--boxsh);
     border-top: 0px solid;
     margin-top: 0;
     padding: 10px;
@@ -212,7 +212,7 @@ code {
   width: 50%;
   margin-top: 0.3rem;
   margin-bottom: 0;
-  font-size: 0.9rem;
+  font-size: 13px;
   line-height: 1.3;
   vertical-align: baseline;
   position: relative;
@@ -354,7 +354,7 @@ label.margin-toggle:not(.sidenote-number) {
   border-bottom: 0px;
   border-right: 1px solid var(--border);
   border-spacing: 0;
-  box-shadow: 4px 4px 0px var(--boxsh);
+  box-shadow: 2px 2px 0px var(--boxsh);
   font-size: 14px;
 
   & td.index-header {
@@ -387,7 +387,7 @@ label.margin-toggle:not(.sidenote-number) {
     & a {
       background-color: black;
       color: white;
-      padding: 0 0.5rem;
+      padding: 0 0.75rem;
       text-decoration: none;
     }
 
@@ -428,6 +428,7 @@ label.margin-toggle:not(.sidenote-number) {
   width: calc(55% - 2px - 2rem);
   border: 1px solid;
   font-family: JB;
+  background-color: var(--block-bg);
 }
 
 .metadata-table {
@@ -521,6 +522,7 @@ label.margin-toggle:not(.sidenote-number) {
 
 .backlink-area {
   width: calc(55% - 10px);
+  background-color: var(--block-bg);
   border: 1px solid var(--border);
   box-shadow: 2px 2px 0px var(--boxsh);
   padding-left: 10px;
@@ -753,9 +755,9 @@ label.margin-toggle:not(.sidenote-number) {
 }
 
 .sh {
-  box-shadow: 2px 2px #ddd;
+  box-shadow: 2px 2px var(--boxsh);
 }
 
 .soft {
-  border-color: #bbb;
+  border-color: var(--border);
 }
